package org.exercise.game.character.equipment.system;

public interface Armor {
    String getName();

    void setName(String n);
}
