package org.exercise.game.character.equipment.system;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class ElfArmor implements Armor {
    private String name;
}
