package org.exercise.game.character.equipment.system;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class ElfMount implements Mount{
    private String name; 
}
