package org.exercise.game.character.equipment.system;

public interface Mount {
    String getName();
    void setName(String n);
}
