package org.exercise.game.character.equipment.system;

import lombok.Getter;
import lombok.Setter;

@Setter
@Getter
public class OrcArmor implements Armor {
    private String name;
}
