package org.exercise.game.character.equipment.system;

public interface Weapon {
    String getName();
    void setName(String n);
}
